<resources>
    <string name="app_name">MatchGame</string>
    <string name="carrot_left"><![CDATA[<]]></string>
    <string name="carrot_right"><![CDATA[>]]></string>
    <string name="start_game_header">Please Choose a Board Size</string>
    <string name="unique_images">Unique Images: %1$d</string>
    <string name="board_size">Board Size: %1$d X %2$d</string>
    <string name="moveTracker">Move Number: %1$d</string>
    <string name="winningMessage">YOU WON IN %1$d moves</string>
    <string name="new_game">New Game</string>
    <string name="start_game">Start Game</string>
</resources>
